--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "django-debug-toolbar>=6.0.0",
+    "ruff>=0.12.5",
 ]
 prod = [
     "gunicorn>=23.0.0",
