--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "django-environ>=0.12.0",
     "django>=5.2.4",
+    "pre-commit>=4.2.0",
 ]
 
 [dependency-groups]
