--- a/.github/workflows/image-build-push.yml
+++ b/.github/workflows/image-build-push.yml
@@ -2,9 +2,7 @@ name: Build and push images to DockerHub
 on: 
   push:
     branches:
-      - main
-    tags:
-      - "v*"
+      - staging
 
 env:
   IMAGE_NAME: ${{ vars.DOCKERHUB_USERNAME }}
