--- a/.github/workflows/image-build-push.yml
+++ b/.github/workflows/image-build-push.yml
@@ -1,30 +1,32 @@
 name: Build and push images to DockerHub
 on: 
   push:
-    branches:
-      - staging
+    tags:
+      - "v*"
 
 env:
   IMAGE_NAME: over-eng-backend
-  IMAGE_TAG: v0.0.1
+  IMAGE_TAG: ${{ github.ref_name }}
+  IMAGE_TAG_SECONDARY: latest
 
 jobs:
   build-push-dockerhub:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - run: echo ${{ env.IMAGE_NAME }}
+      #- name: Login to Docker Hub
+      #  uses: docker/login-action@v3
+      #  with:
+      #    username: ${{ vars.DOCKERHUB_USERNAME }}
+      #    password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      #- name: Set up QEMU
+      #  uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+      #- name: Set up Docker Buildx
+      #  uses: docker/setup-buildx-action@v3
+      #- name: Build and push
+      #  uses: docker/build-push-action@v6
+      #  with:
+      #    push: true
+      #    tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
