--- a/.github/workflows/image-build-push.yml
+++ b/.github/workflows/image-build-push.yml
@@ -1,8 +1,6 @@
 name: Build and push images to DockerHub
 on: 
   push:
-    branches:
-      - staging
     tags:
       - "v*"
 
@@ -15,7 +13,7 @@ jobs:
   build-push-dockerhub:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ env.IMAGE_NAME }}
+      - run: echo ${{ env.IMAGE_TAG }}
       #- name: Login to Docker Hub
       #  uses: docker/login-action@v3
       #  with:
