Didnt realize i needed to add this as well

--- a/.github/workflows/deploy_to_azure_container_app.yml
+++ b/.github/workflows/deploy_to_azure_container_app.yml
@@ -8,6 +8,10 @@ on:
 #      - Build and push images to DockerHub
 #    types:
 #      - completed
+#
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   deploy:
