--- a/.github/workflows/deploy_to_azure_container_app.yml
+++ b/.github/workflows/deploy_to_azure_container_app.yml
@@ -1,6 +1,8 @@
 name: Deploy to Azure Container App service
 on: 
   push:
+    tags:
+      - "v*"
     branches:
       - feature/direct_deployment_to_azure_container_apps
 #  workflow_run:
@@ -28,3 +30,26 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az account show
+
+      - name: Extract environment from tag
+        id: extract_env
+        run: |
+          TAG_NAME="${{ github.ref_name }}"
+          ENV_NAME="${TAG_NAME##*-}"
+          echo $ENV_NAME
+          echo "env_name=$ENV_NAME" >> $GITHUB_OUTPUT
+
+      - name: Deploy to container app
+        run: | 
+            az containerapp create \                                                                     3.255s
+              --name  \
+              --resource-group action \
+              --environment ghaction-env \
+              --image arjith8/over-eng-backend:0.0.2tempp \
+              --ingress external \
+              --target-port 8000 \
+              --registry-server docker.io \
+              --registry-username arjith8 \
+              --registry-password dckr_pat_wBOVvRj_D1fu54jpVZv8B3BSLVc \
+              --cpu 0.5 \
+              --memory 1.0Gi
