--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -44,7 +44,7 @@ jobs:
             ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG_SECONDARY }}
   deploy:
     runs-on: ubuntu-latest
-    needs: build-push-action
+    needs: build-and-push
     steps:
       - name: Azure login
         uses: azure/login@v2
