--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -4,6 +4,10 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: read
+  actions: read
+
 env:
   IMAGE_NAME: over-eng-backend
   IMAGE_TAG: ${{ github.ref_name }}
@@ -42,9 +46,19 @@ jobs:
           tags: |
             ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
             ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG_SECONDARY }}
+
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
+
+    env:
+      AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
+      AZURE_CONTAINER_ENV: ${{ vars.AZURE_CONTAINER_ENV }}
+      TARGET_PORT: ${{ vars.TARGET_PORT }}
+      DOCKER_REPO_NAME: ${{ vars.DOCKER_REPO_NAME }}
+      DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
+      IMAGE_TAG: ${{ github.ref_name }}
+
     steps:
       - name: Azure login
         uses: azure/login@v2
@@ -68,7 +82,6 @@ jobs:
       - name: Setting up env vars
         run: |
            echo "DEPLOYMENT_NAME=over-eng-backend-${{ steps.extract_env.outputs.env_name }}" >> $GITHUB_ENV
-           echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Deploy to container app
         run: | 
