--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -1,29 +1,30 @@
-#name: Build and push images to DockerHub
-#on: 
-#  push:
-#    tags:
-#      - "v*"
-#
-#permissions:
-#  contents: read
-#  actions: read
-#
-#env:
-#  IMAGE_NAME: over-eng-backend
-#  IMAGE_TAG: ${{ github.ref_name }}
-#  IMAGE_TAG_SECONDARY: latest
-#
-#jobs:
-#  build-and-push:
-#    runs-on: ubuntu-latest
-#    steps:
-#
-#      - name: Checking Environment from Tag
-#        run: |
-#          if [[ "${{ github.ref_name }}" == *-staging ]]; then
-#            echo "IMAGE_TAG_SECONDARY=latest-staging" >> $GITHUB_ENV
-#          fi
-#
+name: Build and push images to DockerHub
+on:
+  push:
+    branches:
+      - main
+      - staging
+      # Following branch is added as a temp to test
+      - feature/direct_deployment_to_azure_container_apps
+
+permissions:
+  contents: read
+  actions: read
+
+env:
+  IMAGE_NAME: over-eng-backend
+
+jobs:
+  build-and-push-latest:
+    runs-on: ubuntu-latest
+    env:
+      TEST: ${{ github.head_ref }}
+
+    steps:
+      
+      - name: Checkout the code from current branch
+        uses: actions/checkout@v4
+      - run: echo $TEST
 #      - name: Login to Docker Hub
 #        uses: docker/login-action@v3
 #        with:
