--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -26,38 +26,39 @@ jobs:
       # Also need to test values on prs are merged
       - name: Checkout the code from current branch
         uses: actions/checkout@v4
-      - run: ls
+      - run: ls -a
+      - run: ls -a .github/workflows
 
-#      - run: echo $TEST $TEST2
-#
-#      - name: Set IMAGE_TAG as env var
-#        run: |
-#          if [[ "${GITHUB_REF_NAME}" == "main" ]]; then
-#            echo "IMAGE_TAG=latest" >> $GITHUB_ENV
-#          else
-#            echo "IMAGE_TAG=latest-staging" >> $GITHUB_ENV
-#          fi
-#
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ vars.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v3
-#
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
-#
-#      - name: Build and push
-#        uses: docker/build-push-action@v6
-#        with:
-#          push: true
-#          platforms: linux/amd64,linux/arm64
-#          cache-from: type=gha
-#          cache-to: type=gha,mode=max
-#          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+      - run: echo $TEST $TEST2
+
+      - name: Set IMAGE_TAG as env var
+        run: |
+          if [[ "${GITHUB_REF_NAME}" == "main" ]]; then
+            echo "IMAGE_TAG=latest" >> $GITHUB_ENV
+          else
+            echo "IMAGE_TAG=latest-staging" >> $GITHUB_ENV
+          fi
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
 #  deploy:
 #    runs-on: ubuntu-latest
