--- a/.github/workflows/image-build-push.yml
+++ b/.github/workflows/image-build-push.yml
@@ -1,25 +1,19 @@
 name: Build and push images to DockerHub
 on: 
   push:
+    branches:
+      - main
     tags:
       - "v*"
 
 env:
-  IMAGE_NAME: over-eng-backend
-  IMAGE_TAG: ${{ github.ref_name }}
-  IMAGE_TAG_SECONDARY: latest
+  IMAGE_NAME: ${{ vars.DOCKERHUB_USERNAME }}
+  IMAGE_TAG: v0.0.1
 
 jobs:
   build-push-dockerhub:
     runs-on: ubuntu-latest
     steps:
-
-      - name: Checking Environment from Tag
-        run: |
-          if [[ "${{ github.ref_name }}" == *-staging ]]; then
-            echo "IMAGE_TAG_SECONDARY=latest-staging" >> $GITHUB_ENV
-          fi
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -31,14 +25,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: |
-            ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-            ${{ vars.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG_SECONDARY }}
+          tags: user/app:latest
