Temp diabling most gh action and added collectatatic to container img

--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -1,9 +1,10 @@
 name: Build and push images to DockerHub
 on:
-  push:
-    branches:
-      - main
-      - staging
+  workflow_dispatch:
+  #push:
+  #  branches:
+  #    - main
+  #    - staging
 
 permissions:
   contents: read
