--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -21,5 +21,10 @@ jobs:
         with:
           python-version-file: .python-version
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+
       - name: Run precommit hook
         uses: pre-commit/action@v3.0.1
