--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -1,10 +1,10 @@
 name: Build and push images to DockerHub
 on:
   workflow_dispatch:
-  #push:
-  #  branches:
-  #    - main
-  #    - staging
+  push:
+    branches:
+      - main
+      - staging
 
 permissions:
   contents: read
