--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -1,12 +1,9 @@
 name: Code Checks
 on:
-  push:
-    branches:
-      - "feature/adding-pre-commit-hook-gh-action"
-#  workflow_run:
-#    workflows: ["Build and push images to DockerHub", "Build images that are tagged"]
-#    types:
-#      - requested
+  workflow_run:
+    workflows: ["Build and push images to DockerHub", "Build images that are tagged"]
+    types:
+      - requested
 
 jobs:
   run-pre-commit-hook-check:
