--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -14,17 +14,34 @@ env:
   IMAGE_NAME: over-eng-backend
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Set up the repo locally
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: .python-version
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+
+      - name: Run precommit hook
+        uses: pre-commit/action@v3.0.1
+
   build-and-push-latest:
     runs-on: ubuntu-latest
+    needs: lint
     env:
       TEST: ${{ github.head_ref }}
       TEST2: ${{ github.ref_name }}
 
     steps:
-      
-      - name: Check Code Quality
-        uses: ./.github/workflows/code_check.yml
-
       # Also need to test values on prs are merged
       - name: Checkout the code from current branch
         uses: actions/checkout@v4
