--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -1,5 +1,6 @@
 name: Build and push images to DockerHub
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -13,21 +14,37 @@ env:
   IMAGE_NAME: over-eng-backend
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Set up the repo locally
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: .python-version
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+
+      - name: Run precommit hook
+        uses: pre-commit/action@v3.0.1
+
   build-and-push-latest:
     runs-on: ubuntu-latest
+    needs: lint
     env:
       TEST: ${{ github.head_ref }}
       TEST2: ${{ github.ref_name }}
 
     steps:
-      
       # Also need to test values on prs are merged
       - name: Checkout the code from current branch
         uses: actions/checkout@v4
-      - run: ls -a
-      - run: ls -a .github/workflows
-
-      - run: echo $TEST $TEST2
 
       - name: Set IMAGE_TAG as env var
         run: |
@@ -60,7 +77,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    #needs: build-and-push-latest
+    needs: build-and-push-latest
 
     env:
       AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
