Updated file upload things to be a bit more easy to add restrictions later, also this is the first and base implementation

--- a/ruff.toml
+++ b/ruff.toml
@@ -1,6 +1,11 @@
 line-length = 120
 [lint]
 select = ["ALL"]
-ignore = ["PLC0415", "D212", "D203", "COM812"]
-per-file-ignores = { "manage.py" = ["TRY003", "EM101"] }
+ignore = ["PLC0415", "D212", "D203", "COM812", "D200", "D100", "D101", "DJ008"]
+
+[lint.per-file-ignores]
+"**/migrations/*.py" = ["ALL"]
+"manage.py" = ["TRY003", "EM101"]
+"**/__init__.py" = ["F401", "D104"]
+
 
