Connected BE to azure blob successfully, didnt realise i wont get a error from django storages when i didnt set a required env var

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DJANGO_DEBUG=True
 DJANGO_SECRET_KEY=django-insecure-&a_i#=szyg*h-8n*fijkw*dy%lii*x@bh8n1o5qny)af473^hw
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
+AZURE_CONNECTION_STRING=value
+AZURE_CONTAINER_NAME=test
