--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
     "django-environ>=0.12.0",
     "django>=5.2.4",
     "pre-commit>=4.2.0",
+    "django-storages>=1.14.6",
+    "pillow>=11.3.0",
+    "djangorestframework>=3.16.1",
+    "azure-storage-blob>=12.26.0",
 ]
 
 [dependency-groups]
