--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
 AZURE_CONNECTION_STRING=value
 AZURE_CONTAINER_NAME=test
+DJANGO_DB_NAME=over_engineered
+DJANGO_DB_USER=user
+DJANGO_DB_PASSWORD=password
+DJANGO_DB_HOST=database
+DJANGO_DB_PORT=5432
