--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pillow>=11.3.0",
     "djangorestframework>=3.16.1",
     "azure-storage-blob>=12.26.0",
+    "psycopg[binary]>=3.2.9",
 ]
 
 [dependency-groups]
