--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-DJANGO_DEBUG=True
-DJANGO_SECRET_KEY=django-insecure-&a_i#=szyg*h-8n*fijkw*dy%lii*x@bh8n1o5qny)af473^hw
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
+DEBUG=True
+SECRET_KEY=django-insecure-&a_i#=szyg*h-8n*fijkw*dy%lii*x@bh8n1o5qny)af473^hw
+ALLOWED_HOSTS=localhost,127.0.0.1
+CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
 AZURE_CONNECTION_STRING=value
 AZURE_CONTAINER_NAME=test
-DJANGO_DB_NAME=over_engineered
-DJANGO_DB_USER=user
-DJANGO_DB_PASSWORD=password
-DJANGO_DB_HOST=database
-DJANGO_DB_PORT=5432
+DB_NAME=over_engineered
+DB_USER=user
+DB_PASSWORD=password
+DB_HOST=database
+DB_PORT=5432
